<resources>
    <string name="app_name">SeChat</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">Create a new account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="back_to_main">Main page</string>
    <string name="email">Email address</string>
    <string name="email_nickname">Email address or Nickname</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="fill_blanks">Please fill all the blanks!</string>
    <string name="short_name">Nickname cannot be shorter than 2 character!</string>
    <string name="invalid_mail">Given email address is invalid!</string>
    <string name="short_pass">Password cannot be shorter than 6 character!</string>
    <string name="error_occurred">An error occurred, Please try again!</string>
    <string name="email_exist">This email exists in the system!</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="email_not_exist">There is no user with this email address in the system!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission">Permission Needed</string>
    <string name="permission_exp">You need to give permissions on Settings</string>
    <string name="all_videos">All Videos</string>
    <string name="all_media">All Media</string>
    <string name="camera">Camera</string>
    <string name="downloads">Downloads</string>
    <string name="screenshots">Screenshots</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="use_camera">Use Camera</string>
    <string name="send">Send</string>
    <string name="forgot_txt">Please enter your email address linked to your account. You will receive reset password email.</string>
    <string name="forgot_sent">Reset password email sent!</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="sent_photo">sent a photo</string>
    <string name="sent_video">sent a video</string>
    <string name="sent_location">sent a location</string>
    <string name="now">now</string>
    <string name="just_now">just now</string>
    <string name="one_m">1m</string>
    <string name="m">m</string>
    <string name="one_h">1h</string>
    <string name="h">h</string>
    <string name="yesterday">yesterday</string>
    <string name="d">d</string>
    <string name="no_messages">No messages</string>
    <string name="no_friends">No friends</string>
    <string name="send_message">Send a message</string>
    <string name="delete_user">Delete</string>
    <string name="block_user">Block</string>
    <string name="search_friends">Search friends</string>
    <string name="search_messages">Search messages</string>
    <string name="typing">Typing…</string>
    <string name="seen">Seen</string>
    <string name="block">This user blocked you. You cannot send a message.</string>
    <string name="block2">You blocked this user. You cannot send a message.</string>
    <string name="write_code">Write a code</string>
    <string name="add_friend">Add friend</string>
    <string name="send_new_message">Send a new message</string>
    <string name="code_wrong">No user exist with this code!</string>
    <string name="code_info">Enter your friends\' code to start conversation with them</string>
    <string name="new_msg_no">No user found!</string>
    <string name="no_message">No message found!</string>
    <string name="search_msg">Search in messages</string>
    <string name="near_by">Near by places</string>
    <string name="your_location">Your location</string>
    <string name="clear_location">Clear location</string>
    <string name="send_location">Send location</string>
    <string name="send_exact_location">Send your exact location</string>
    <string name="error_location">Location not found!</string>
    <string name="info">Information</string>
    <string name="shared_media">Shared media</string>
    <string name="mute">Mute conversation</string>
    <string name="report">Report</string>
    <string name="delete">Delete conversation</string>
    <string name="delete_convo">Are you sure to delete this conversation?</string>
    <string name="reason">Reason</string>
    <string name="done">Done</string>
    <string name="reason_report">Reason of report this user</string>
    <string name="inappropriate_msg">Inappropriate message</string>
    <string name="other">Other</string>
    <string name="block_msg">Are you sure to block this user?</string>
    <string name="unblock">Unblock</string>
    <string name="unblock_msg">Are you sure to unblock this user?</string>
    <string name="logout">Log out</string>
    <string name="show_code">Show my code</string>
    <string name="change_name">Change nickname</string>
    <string name="change">Change</string>
    <string name="current_name">Your current nickname is:</string>
    <string name="dark_mode">Dark mode</string>
</resources>