<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_frame">

    <TextView
        android:id="@+id/fm_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/send_message"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_new_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fm_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/delete_user"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fm_send" />

    <TextView
        android:id="@+id/fm_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/block_user"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_block_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fm_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>